--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -33,7 +33,7 @@
         margin-bottom: 1em;
     }
 
-    .img-trigger {
+    .img-link {
         display: block;
         margin-bottom: 1rem;
         position: relative;
