Update tech stack and intro sections

--- a/src/partials/intro.html
+++ b/src/partials/intro.html
@@ -1,8 +1,8 @@
 <div class="intro">
     <div class="container">
-        <h1>Nick Karch is a frontend web developer</h1>
+        <h1>Nick Karch | Frontend web developer</h1>
 
-        <p class="sub-h">Hai, I'm Nick. I made some websites. I'd sure like to make some more.</p>
+        <p class="sub-h">Hi! I'm a Toronto-based web developer, and you've reached the right place to see some of the projects I've built.</p>
 
         <include src="./partials/tech-stack.html"></include>
 
